--- a/daemon/algod/api/algod.oas3.yml
+++ b/daemon/algod/api/algod.oas3.yml
@@ -1489,6 +1489,46 @@
         ],
         "type": "object"
       },
+      "Message": {
+        "description": "Represents the message that the state proofs are attesting to.",
+        "properties": {
+          "BlockHeadersCommitment": {
+            "description": "The vector commitment on all light block headers within a state proof interval.",
+            "format": "byte",
+            "pattern": "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$",
+            "type": "string"
+          },
+          "FirstAttestedRound": {
+            "description": "The first round the message attests to.",
+            "type": "integer",
+            "x-algorand-format": "uint64"
+          },
+          "LastAttestedRound": {
+            "description": "The last round the message attests to.",
+            "type": "integer",
+            "x-algorand-format": "uint64"
+          },
+          "LnProvenWeight": {
+            "description": "The result of the invoking ln function on the proven weight.",
+            "type": "integer",
+            "x-algorand-format": "uint64"
+          },
+          "VotersCommitment": {
+            "description": "The vector commitment of the top N accounts to sign the next StateProof.",
+            "format": "byte",
+            "pattern": "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$",
+            "type": "string"
+          }
+        },
+        "required": [
+          "BlockHeadersCommitment",
+          "FirstAttestedRound",
+          "LastAttestedRound",
+          "LnProvenWeight",
+          "VotersCommitment"
+        ],
+        "type": "object"
+      },
       "ParticipationKey": {
         "description": "Represents a participation key used by the node.",
         "properties": {
@@ -1623,10 +1663,7 @@
         "description": "Represents a state proof and its corresponding message",
         "properties": {
           "Message": {
-            "description": "The encoded message.",
-            "format": "byte",
-            "pattern": "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$",
-            "type": "string"
+            "$ref": "#/components/schemas/Message"
           },
           "StateProof": {
             "description": "The encoded StateProof for the message.",
